# biotac_ros

./: CMakeLists.txt  README.md  package.xml
include/: sensor_process.h
launch/: biotac_sensor.launch
msg/: fingerMsg.msg
scripts/: custom_models.py  normalPrediciton.py  normalPrediction.py
src/: node_biotac_sensor.cpp  sensor_process.cpp
srv/: nnmodel.srv
